--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@ code/Rmarkdown/plots-markdown/
 results/
 code/R/depr/
 code/Rmarkdown/depr/
+code/Rmarkdown/Cluster-Precip_files/figure-html/
+figure-html/
