changed file structure a bit, parallel computing, full model fitting fused!

--- a/code/R/fused-lasso/fused-test/config-fused-test.yml
+++ b/code/R/fused-lasso/fused-test/config-fused-test.yml
@@ -9,6 +9,7 @@ default:
   size_test:  14
   small:  TRUE
   model:  "fused"
+  parallelize: TRUE
   maxsteps:  10
   gamma:  0
   standardize_response:  TRUE
