--- a/code/R/fused-lasso/small-fused-1k/config-small-fused-1k.yml
+++ b/code/R/fused-lasso/small-fused-1k/config-small-fused-1k.yml
@@ -9,6 +9,7 @@ default:
   size_test:  14
   small:  TRUE
   model:  "fused"
+  parallelize: TRUE
   maxsteps:  1000
   gamma:  0
   standardize_response:  TRUE
