--- a/thesis/_bookdown.yml
+++ b/thesis/_bookdown.yml
@@ -9,7 +9,7 @@ delete_merged_file: TRUE
 rmd_files:
   html: [ "index.Rmd", "1a-related-work.Rmd", "1b-EDA-precip.Rmd", "1c-glyph-plots.Rmd", "1bb-EDA-sst.Rmd",
     "1d-corr-summary.Rmd", "2-main-idea-clustering.Rmd", "3a-clustering-methods.Rmd",
-    "4-analyse-clustering-results.Rmd", "5s-method-lasso-regression.Rmd"]
+    "4-analyse-clustering-results.Rmd", "5s-method-lasso-regression.Rmd", "5t-method-fused-lasso.Rmd"]
   latex: [ "index.Rmd", "1a-related-work.Rmd", "1b-EDA-precip.Rmd", "1c-glyph-plots.Rmd", "1bb-EDA-sst.Rmd",
     "1d-corr-summary.Rmd", "2-main-idea-clustering.Rmd", "3a-clustering-methods.Rmd",
-    "4-analyse-clustering-results.Rmd", "5s-method-lasso-regression.Rmd"]
+    "4-analyse-clustering-results.Rmd", "5s-method-lasso-regression.Rmd", "5t-method-fused-lasso.Rmd"]
