changed comments from fabi on first draft, added title page

--- a/thesis/_bookdown.yml
+++ b/thesis/_bookdown.yml
@@ -1,20 +1,7 @@
-title: "Predicting Droughts in the Amazon Basin based on Global Sea Surface Temperatures"
-author: "Dario Lepke"
-bibliography: ref-lib.bib
-biblio-style: apalike
-link-citations: yes
-documentclass: book
-output_dir: "thesis-book"
 delete_merged_file: TRUE
-output:
-  pdf_document:
-    latex_engine: xelatex
-  bookdown::pdf_document2:
-    latex_engine: xelatex
-  bookdown::pdf_book:
-    latex_engine: xelatex
 rmd_files:
-  html: ["index.Rmd",
+  html: [
+  "index.Rmd",
     "1a-related-work.Rmd",
     "1b-EDA-precip.Rmd",
     "1c-glyph-plots.Rmd",
@@ -29,7 +16,8 @@ rmd_files:
     "5s----lasso-deseas-summary.Rmd",
     "5s-----lasso-diff1-summary.Rmd",
     "5t-method-fused-lasso.Rmd"]
-  latex: ["index.Rmd",
+  latex: [
+  "index.Rmd",
     "1a-related-work.Rmd", 
     "1b-EDA-precip.Rmd",
     "1c-glyph-plots.Rmd",
