--- a/thesis/_bookdown.yml
+++ b/thesis/_bookdown.yml
@@ -9,12 +9,18 @@ rmd_files:
     "1d-corr-summary.Rmd",
     "2-main-idea-clustering.Rmd",
     "3a-clustering-methods.Rmd",
+    "3b-clustering-results.Rmd",
     "4-analyse-clustering-results.Rmd",
     "5s-method-lasso-regression.Rmd",
-    "5s--lasso-results-summary.Rmd",
-    "5s---lasso-stand-summary.Rmd",
-    "5s----lasso-deseas-summary.Rmd",
-    "5s-----lasso-diff1-summary.Rmd",
+    "5s-lasso-results-summary.Rmd",
+    "5s-lasso-stand-summary.Rmd",
+    "5s-lasso-deseas-summary.Rmd",
+    "5s-lasso-diff1-summary.Rmd",
+    "lasso-summary-cluster-1.Rmd",
+    "lasso-summary-cluster-2.Rmd",
+    "lasso-summary-cluster-3.Rmd",
+    "lasso-summary-cluster-4.Rmd",
+    "lasso-summary-cluster-5.Rmd",
     "5t-method-fused-lasso.Rmd"]
   latex: [
   "index.Rmd",
@@ -25,10 +31,16 @@ rmd_files:
     "1d-corr-summary.Rmd",
     "2-main-idea-clustering.Rmd",
     "3a-clustering-methods.Rmd",
+    "3b-clustering-results.Rmd",
     "4-analyse-clustering-results.Rmd",
     "5s-method-lasso-regression.Rmd",
-    "5s--lasso-results-summary.Rmd",
-    "5s---lasso-stand-summary.Rmd",
-    "5s----lasso-deseas-summary.Rmd",
-    "5s-----lasso-diff1-summary.Rmd",
+    "5s-lasso-results-summary.Rmd",
+    "5s-lasso-stand-summary.Rmd",
+    "5s-lasso-deseas-summary.Rmd",
+    "5s-lasso-diff1-summary.Rmd",
+    "lasso-summary-cluster-1.Rmd",
+    "lasso-summary-cluster-2.Rmd",
+    "lasso-summary-cluster-3.Rmd",
+    "lasso-summary-cluster-4.Rmd",
+    "lasso-summary-cluster-5.Rmd",
     "5t-method-fused-lasso.Rmd"]
