fused lasso summary , coef plot replo

--- a/thesis/_bookdown.yml
+++ b/thesis/_bookdown.yml
@@ -22,7 +22,8 @@ rmd_files:
     "lasso-summary-cluster-4.Rmd",
     "lasso-summary-cluster-5.Rmd",
     "5t-method-fused-lasso.Rmd",
-    "5tt-results-fused-lasso.Rmd"]
+    "5tt-results-fused-lasso.Rmd",
+    "5tttt-results-noclust-gamma01.Rmd"]
   latex: ["index.Rmd",
     "1a-related-work.Rmd", 
     "1b-EDA-precip.Rmd",
@@ -44,4 +45,5 @@ rmd_files:
     "lasso-summary-cluster-4.Rmd",
     "lasso-summary-cluster-5.Rmd",
     "5t-method-fused-lasso.Rmd",
-    "5tt-results-fused-lasso.Rmd"]
+    "5tt-results-fused-lasso.Rmd",
+    "5tttt-results-noclust-gamma01.Rmd"]
