--- a/thesis/_bookdown.yml
+++ b/thesis/_bookdown.yml
@@ -23,7 +23,8 @@ rmd_files:
     "lasso-summary-cluster-5.Rmd",
     "5t-method-fused-lasso.Rmd",
     "5tt-results-fused-lasso.Rmd",
-    "5tttt-results-noclust-gamma01.Rmd"]
+    "5tttt-results-noclust-gamma01.Rmd",
+    "appendix.Rmd"]
   latex: ["index.Rmd",
     "1a-related-work.Rmd", 
     "1b-EDA-precip.Rmd",
@@ -46,4 +47,5 @@ rmd_files:
     "lasso-summary-cluster-5.Rmd",
     "5t-method-fused-lasso.Rmd",
     "5tt-results-fused-lasso.Rmd",
-    "5tttt-results-noclust-gamma01.Rmd"]
+    "5tttt-results-noclust-gamma01.Rmd",
+    "appendix.Rmd"]
